--- a/assets/style/stream-player.scss
+++ b/assets/style/stream-player.scss
@@ -63,10 +63,10 @@
   }
 
   // Transcoding menu
-  .vjs-tech {
+  /*.vjs-tech {
     height: auto !important;
     position: absolute !important;
-  }
+  }*/
 
   // Menu size
   .vjs-playback-rate .vjs-menu .vjs-menu-content {
