--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -12,16 +12,18 @@ html {
 }
 
 
-$c1: #0c2a41;
+/*$c1: #0c2a41;
 $c2: #0a0a19;
 $c3: #262639;
 $c4: #251237;
 $c5: #0e1b28;
-$c6: #113a5a;
-body .gradient-background {
-  background: linear-gradient(-45deg, $c1, $c2, $c3, $c4, $c5, $c6);
+$c6: #113a5a;*/
+
+.v-application .gradient-background {
+  //background: linear-gradient(-45deg, 0c2a41, 0a0a19, 262639, 251237, 0e1b28, 113a5a);
+  background: linear-gradient(-45deg, #0c2a41, #0a0a19, #262639, #251237, #0e1b28, #113a5a);
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 10s ease infinite;
 }
 
 @keyframes gradient {
