CSS background change

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -21,7 +21,7 @@ $c6: #113a5a;*/
 
 .v-application .gradient-background {
   //background: linear-gradient(-45deg, 0c2a41, 0a0a19, 262639, 251237, 0e1b28, 113a5a);
-  background: linear-gradient(-45deg, #0c2a41, #0a0a19, #262639, #251237, #0e1b28, #113a5a);
+  background: linear-gradient(-45deg, #0e3955, #0a0a19, #141e39, #251237, #0e1b28, #113a5a);
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
 }
