--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -3,3 +3,46 @@
 html {
   font-family: "Roboto", sans-serif;
 }
+
+.v-application {
+  .bw-channel-topbar {
+    border-right: solid 1px $bw-blue !important;
+    overflow: auto;
+  }
+}
+
+
+/*$c1: #0c2a41;
+$c2: #0a0a19;
+$c3: #262639;
+$c4: #251237;
+$c5: #0e1b28;
+$c6: #113a5a;*/
+
+.v-application .gradient-background {
+  //background: linear-gradient(-45deg, 0c2a41, 0a0a19, 262639, 251237, 0e1b28, 113a5a);
+  background: linear-gradient(-45deg, #0e3955, #0a0a19, #053e5a, #251237, #0e1b28, #113a5a);
+  background-size: 400% 400%;
+  animation: gradient 30s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
+
+/* Dora Gradient Background */
+/*body {
+  .v-application.theme--dark {
+    background: rgb(10,10,25);
+    background: linear-gradient(0deg, rgba(10,10,25,1) 0%, rgba(21,21,34,1) 100%);
+  }
+}*/
