--- a/assets/style/stream-player.scss
+++ b/assets/style/stream-player.scss
@@ -183,3 +183,29 @@ a {
   from {opacity: 1.0;}
   to {opacity: 0.0;}
 }
+
+
+// Odysee Skin
+.odysee-skin {
+
+  // Odysee vjs player skin
+  .video-js {
+
+    // Odysee vjs play button
+    .vjs-big-play-button {
+      background-color: #f64853 !important;
+      border: none !important;
+      border-radius: 50% !important;
+      width: 5rem !important;
+      height: 5rem !important;
+      background-position: calc(50% + 0.1rem) center !important;
+      background-size: 2.5rem !important;
+      background-repeat: no-repeat !important;
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3Cg stroke='white' stroke-width='2' fill='white' fill-rule='evenodd' stroke-linejoin='round'%3E %3Cpolygon points='5 21 5 3 21 12'/%3E %3C/g%3E %3C/svg%3E") !important;
+
+      & .vjs-icon-placeholder::before {
+        content: none !important;
+      }
+    }
+  }
+}
