fix odysee play button red color

--- a/assets/style/stream-player.scss
+++ b/assets/style/stream-player.scss
@@ -193,7 +193,7 @@ a {
 
     // Odysee vjs play button
     .vjs-big-play-button {
-      background-color: #f64853 !important;
+      background-color: #fa6165 !important;
       border: none !important;
       border-radius: 50% !important;
       width: 5rem !important;
