override bumps for odysee, add vjs-odysee class
overrides bumps when player `isOdysee`.
Adds `vjs-odysee` class to player to make additional styling overrides easier (hopefully removing the need to use `!important`)
Renames `odyseeSkin` to `isOdysee`
Bypass API call to bump endpoint when `isOdysee` is true (slight load time reduction by removing a roundtrip call during `asyncData` when stream is offline)

--- a/assets/style/stream-player.scss
+++ b/assets/style/stream-player.scss
@@ -189,7 +189,7 @@ a {
 .odysee-skin {
 
   // Odysee vjs player skin
-  .video-js {
+  .video-js.vjs-odysee {
 
     // Odysee vjs play button
     .vjs-big-play-button {
