Test new video.js poster styling
should figure out a fix for the !important styling overrides later

--- a/assets/style/stream-player.scss
+++ b/assets/style/stream-player.scss
@@ -96,6 +96,26 @@ $accent-color: #13a9fe;
       transition: .2s;
     }
   }
+
+  // Poster Improvements
+  .vjs-poster {
+    background-position: 50% 50% !important;
+    background-repeat: no-repeat !important;
+    background-size: contain !important;
+    cursor: pointer;
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    opacity: 1;
+    transition: opacity .5s ease;
+  }
+
+  &.vjs-has-started .vjs-poster {
+    opacity: 0;
+  }
 }
 
 
